--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,3 +2,12 @@ stages:
   - build
   - test
   - deploy
+
+testing-progect:
+  stage: test
+  tags:
+    - test
+  image: ubuntu:20.04
+  script:
+    - echo "$CI_COMMIT_AUTHOR pushed new commit  \ 
+    $CI_COMMIT_SHORT_SHA, message - $CI_COMMIT_MESSAGE"
