--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,15 +3,16 @@ stages:
   - test
   - deploy
 
-building project:
+building server:
   stage: test
   tags:
     - shell
   before_script:
-    - docker build -t server:$CI_COMMIT_SHORT_SHA Backend/victory
+    - cp Backend/victory /home/admin/projectvictory-test/
+    # - docker build -t server:$CI_COMMIT_SHORT_SHA Backend/victory
   script:
-    - docker run --rm -it --name django -p 5000:8000 server:$CI_COMMIT_SHORT_SHA
-  after_script:
-    - docker system prune -a
+    - ls -l /home/admin/projectvictory-test/
+  # after_script:
+    # - docker system prune -a
   only:
     - dev
