--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,10 +8,10 @@ building server:
   tags:
     - shell
   before_script:
-    - cp -r Backend/victory /home/admin/projectvictory-test/
+    - cp -r Backend/victory /test
     # - docker build -t server:$CI_COMMIT_SHORT_SHA Backend/victory
   script:
-    - ls -l /home/admin/projectvictory-test/
+    - ls -l /test
   # after_script:
     # - docker system prune -a
   only:
