Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,16 +5,19 @@ stages:
   - test
   - deploy
 
+variables:
+  PROJECT_DIR: ~/projectvictory-test/
+
 building_server:
   stage: test
   tags:
     - shell
   before_script:
-    - sudo cp -r Backend/victory ~/projectvictory-test/
-    # - docker build -t server:$CI_COMMIT_SHORT_SHA Backend/victory
+    - sudo cp -r Backend/victory $PROJECT_DIR/backend
+    - docker build -t server:$CI_COMMIT_SHORT_SHA $PROJECT_DIR/backend
   script:
     - ls -l ~/projectvictory-test/
   after_script:
-    - docker -version
+    - docker version
   only:
     - dev
