Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,9 +14,9 @@ building_server:
     - shell
   before_script:
     - sudo cp -r Backend/victory ~/projectvictory-test/backend/
-    - docker build -t server:$CI_COMMIT_SHORT_SHA ~/projectvictory-test/backend/
+    - docker build -t server:$CI_COMMIT_SHORT_SHA ~/projectvictory-test/backend/victory/
   script:
-    - ls -l ~/projectvictory-test/
+    - ls -l ~/projectvictory-test/backend/
   # after_script:
   #   - docker version
   only:
