modify CI files

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,11 +13,12 @@ building_server:
   tags:
     - shell
   before_script:
+    - docker stop django
     - sudo cp -r Backend/victory ~/projectvictory-test/backend/
     - docker build -t server:$CI_COMMIT_SHORT_SHA ~/projectvictory-test/backend/victory/
   script:
     - ls -l ~/projectvictory-test/backend/
-  # after_script:
-  #   - docker version
+  after_script:
+    - docker system prune -af
   only:
     - dev
