--- a/Backend/victory/Dockerfile
+++ b/Backend/victory/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.9
+FROM python:3.8
 
 COPY . /server
 
@@ -6,7 +6,4 @@ WORKDIR /server
 
 RUN pip3 install -r requirements
 
-RUN python3 manage.py makemigrations
-RUN python3 manage.py migrate
-
-ENTRYPOINT python3 manage.py runserver 0.0.0.0:8000
+ENTRYPOINT bash init.sh
