--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,16 +7,26 @@ stages:
 
 variables:
   PROJECT_DIR: "~/projectvictory-test"
+  SERVER_NAME: "django"
+
+
+testing:
+  stage: test
+  tags:
+    - shell
+  script: echo "testing"
+    - if: docker ps != NULL
+
 
 building_server:
   stage: test
   tags:
     - shell
   before_script:
-    - sudo cp -r Backend/victory ~/projectvictory-test/backend/
-    - docker build -t server:$CI_COMMIT_SHORT_SHA ~/projectvictory-test/backend/victory/
+    - sudo cp -r Backend/victory $PROJECT_DIR/backend/
+    - docker build -t server:$CI_COMMIT_SHORT_SHA $PROJECT_DIR/backend/victory/
   script:
-    - docker run --rm --name django -d -p 5000:8000 server:$CI_COMMIT_SHORT_SHA
+    - docker run --rm --name $SERVER_NAME -d -p 5000:8000 server:$CI_COMMIT_SHORT_SHA
   after_script:
     - docker system prune -af
   only:
