--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,3 @@
-image: ubuntu:20.04
-
 stages:
   - build
   - test
@@ -9,22 +7,20 @@ variables:
   PROJECT_DIR: "~/projectvictory-test"
   SERVER_NAME: "django"
 
-
-testing:
-  stage: test
+building_server_app:
+  stage: build
   tags:
     - shell
-  script: echo "testing"
-    - if: docker ps != NULL
-
-
-building_server:
-  stage: test
-  tags:
-    - shell
-  before_script:
+  script:
     - sudo cp -r Backend/victory $PROJECT_DIR/backend/
     - docker build -t server:$CI_COMMIT_SHORT_SHA $PROJECT_DIR/backend/victory/
+  only:
+    - dev
+
+run_server_app:
+  stage: test
+  tags:
+    - shell
   script:
     - docker run --rm --name $SERVER_NAME -d -p 5000:8000 server:$CI_COMMIT_SHORT_SHA
   after_script:
