--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,16 +4,19 @@ stages:
   - deploy
 
 variables:
-  PROJECT_DIR: "~/projectvictory-test"
-  SERVER_NAME: "django"
+  BACKEND_NAME: "django"
 
 building_server_app:
   stage: build
   tags:
     - shell
   script:
-    - sudo cp -r Backend/victory $PROJECT_DIR/backend/
-    - docker build -t server:$CI_COMMIT_SHORT_SHA $PROJECT_DIR/backend/victory/
+    - sudo cp -r Backend/victory ~/projectvictory-test/backend/
+    - docker build -t server:$CI_COMMIT_SHORT_SHA ~/projectvictory-test/backend/victory/
+  after_script: sudo cp cheker.sh ~
+  rules:
+    changes:
+      - cheker.sh
   only:
     - dev
 
@@ -21,8 +24,10 @@ run_server_app:
   stage: test
   tags:
     - shell
+  before_script:
+    - bash cheker.sh $BACKEND_NAME
   script:
-    - docker run --rm --name $SERVER_NAME -d -p 5000:8000 server:$CI_COMMIT_SHORT_SHA
+    - docker run --rm --name $BACKEND_NAME -d -p 5000:8000 server:$CI_COMMIT_SHORT_SHA
   after_script:
     - docker system prune -af
   only:
