--- a/Backend/victory/Dockerfile
+++ b/Backend/victory/Dockerfile
@@ -4,6 +4,6 @@ COPY . /server
 
 WORKDIR /server
 
-RUN pip3 install -r requirements
+RUN pip3 install -r requirements.txt
 
 ENTRYPOINT bash init.sh
