Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,14 @@
 stages:
   - build
   - test
+  - clear
   - deploy
 
 variables:
   BACKEND_NAME: "django"
+  FRONTEND_NAME: "Vue3"
 
-building_server_app:
+building Django:
   stage: build
   tags:
     - shell
@@ -15,8 +17,18 @@ building_server_app:
     - docker build -t server:$CI_COMMIT_SHORT_SHA ~/projectvictory-test/backend/victory/
   only:
     - dev
+  
+building Vue3:
+  stage: build
+  tags:
+    - shell
+  script:
+    - sudo cp -r Frontend/ ~/projectvictory-test/frontend/
+    - docker build -t frontend:$CI_COMMIT_SHORT_SHA ~/projectvictory-test/frontend/
+  only:
+    - dev
 
-run_server_app:
+start Django:
   stage: test
   tags:
     - shell
@@ -26,5 +38,25 @@ run_server_app:
   script:
     - docker run --rm --name $BACKEND_NAME -d -p 5000:8000 -p 587:587 server:$CI_COMMIT_SHORT_SHA
     - docker system prune -af
+  only:
+    - dev
+
+start Vue3:
+  stage: test
+  tags:
+    - shell
+  before_script:
+    - sudo cp cheker.sh ~
+    - bash cheker.sh $FRONTEND_NAME
+  script:
+     - docker run --rm --name $FRONTEND_NAME -d -p 5001:8080 frontend:$CI_COMMIT_SHORT_SHA
+  only:
+    - dev
+
+remove old containers:
+  stage: clear
+  tags:
+    - shell
+  script: docker system prune -af
   only:
     - dev
