--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,8 @@ version: '3.1'
 
 services:
   backend: 
-    container_name: django
-    build: Backend/victory/
+    container_name: backend
+    build: backend/victory/
     restart: always
     ports:
       - 8000:8000
@@ -11,21 +11,20 @@ services:
     expose:
       - 8000
       - 587
-
-  # frontend:
-  #   container_name: vue3
-  #   build: ~/projectvictory-test/frontend/
-  #   restart: always
-  #   ports:
-  #     - 5001:80
-  #   depends_on:
-  #     - backend
-  #   expose:
-  #     - 5001
-    
-  web:
-    image: nginx:stable
-    ports:
-      - 8080:80
     volumes:
-      - /Users/pavel_milanov/Desktop/projects/projectvictory/nginx.conf:/etc/nginx/nginx.conf
+      - ~/projectvictory-test/static/:/static/
+
+  frontend:
+    container_name: web
+    build: frontend/
+    restart: always
+    ports:
+      - 80:80
+    depends_on:
+      - backend
+    expose:
+      - 80
+    volumes:
+      - ~/projectvictory-test/nginx.conf:/etc/nginx/nginx.conf
+      - ~/projectvictory-test/static/:/www/static
+
