--- a/nginx.conf
+++ b/nginx.conf
@@ -18,17 +18,23 @@ http {
   server {
     listen       80;
     server_name 0.0.0.0;
-    # location / {
-    #   root   /www;
-    #   index  index.html;
-    #   include  /etc/nginx/mime.types;
-    # }
+
     location / {
+      root   /www;
+      index  index.html;
+      include  /etc/nginx/mime.types;
+    }
+
+    location static/ {
+        root /www/static;
+    }
+
+    location /server/ {
         proxy_pass http://backend:8000;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
-        }
-
+    }
+    
   }
 }
