--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ copy files:
     - sudo cp -r Frontend/ ~/projectvictory-test/frontend/
   after_script:
     - sudo cp nginx.conf ~/projectvictory-test/
+    - sudo cp docker-compose.yaml
   only:
     - dev
   
