--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,29 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@ckeditor/ckeditor5-autoformat": "^34.1.0",
-    "@ckeditor/ckeditor5-basic-styles": "^34.1.0",
-    "@ckeditor/ckeditor5-block-quote": "^34.1.0",
-    "@ckeditor/ckeditor5-build-classic": "^34.1.0",
-    "@ckeditor/ckeditor5-dev-utils": "^30.3.0",
-    "@ckeditor/ckeditor5-dev-webpack-plugin": "^30.3.0",
-    "@ckeditor/ckeditor5-editor-classic": "^34.1.0",
-    "@ckeditor/ckeditor5-essentials": "^34.1.0",
-    "@ckeditor/ckeditor5-font": "^34.1.0",
-    "@ckeditor/ckeditor5-heading": "^34.1.0",
-    "@ckeditor/ckeditor5-horizontal-line": "^34.1.0",
-    "@ckeditor/ckeditor5-image": "^34.1.0",
-    "@ckeditor/ckeditor5-indent": "^34.1.0",
-    "@ckeditor/ckeditor5-link": "^34.1.0",
-    "@ckeditor/ckeditor5-list": "^34.1.0",
-    "@ckeditor/ckeditor5-media-embed": "^34.1.0",
-    "@ckeditor/ckeditor5-paragraph": "^34.1.0",
-    "@ckeditor/ckeditor5-paste-from-office": "^34.1.0",
-    "@ckeditor/ckeditor5-table": "^34.1.0",
-    "@ckeditor/ckeditor5-theme-lark": "^34.1.0",
-    "@ckeditor/ckeditor5-typing": "^34.1.0",
-    "@ckeditor/ckeditor5-upload": "^34.1.0",
-    "@ckeditor/ckeditor5-vue": "^4.0.1",
+    "@vueup/vue-quill": "^1.0.0-beta.8",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "postcss-loader": "4",
