--- a/Backend/victory/Dockerfile
+++ b/Backend/victory/Dockerfile
@@ -1,7 +1,10 @@
 FROM python:3.8
 
+ARG ip
+ENV IP_ADDR=$ip
+
 COPY . /.
 
 RUN pip3 install -r requirements.txt
 
-ENTRYPOINT bash init.sh 0.0.0.0
+ENTRYPOINT bash init.sh ${IP_ADDR}
