--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,13 +7,13 @@ copy files:
   stage: build
   tags:
     - shell
-  before_script:
-    - sudo rm -r ~/projectvictory-test/
+  # before_script:
+  #   - sudo rm -r ~/projectvictory-test/
   script:
-    - sudo cp -r Backend/victory ~/projectvictory-test/backend/
-    - sudo cp -r Frontend/ ~/projectvictory-test/frontend/
-    - sudo cp nginx.conf ~/projectvictory-test/
-    - sudo cp docker-compose.yaml ~/projectvictory-test/
+    - sudo cp -R Backend/victory ~/projectvictory-test/backend/
+    - sudo cp -R Frontend/ ~/projectvictory-test/frontend/
+    - sudo cp -f nginx.conf ~/projectvictory-test/
+    - sudo cp -f docker-compose.yaml ~/projectvictory-test/
   only:
     - dev
   
