--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,8 +10,8 @@ copy files:
   # before_script:
   #   - sudo rm -r ~/projectvictory-test/
   script:
-    - sudo cp -R Backend/victory ~/projectvictory-test/backend/
-    - sudo cp -R Frontend/ ~/projectvictory-test/frontend/
+    # - sudo cp -R Backend/victory ~/projectvictory-test/backend/
+    # - sudo cp -R Frontend/ ~/projectvictory-test/frontend/
     - sudo cp -f nginx.conf ~/projectvictory-test/
     - sudo cp -f docker-compose.yaml ~/projectvictory-test/
   only:
