--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,9 +4,7 @@ services:
   backend: 
     container_name: backend
     build: backend/
-      context: .
-      args:
-        ip: 0.0.0.0
+      args:ip="0.0.0.0"
     restart: always
     ports:
       - 8000:8000
