--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,9 +3,10 @@ version: '3.1'
 services:
   backend: 
     container_name: backend
-    build: backend/
-    args:
-      ip: 0.0.0.0
+    build:
+      context: backend/ 
+      args:
+          ip: 0.0.0.0
     restart: always
     ports:
       - 8000:8000
