--- a/Backend/victory/requirements.txt
+++ b/Backend/victory/requirements.txt
@@ -14,20 +14,27 @@ django-templated-mail==1.1.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
+drf-yasg==1.20.0
+gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.11.4
+inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.2
 Markdown==3.3.7
 MarkupSafe==2.1.1
 oauthlib==3.2.0
+packaging==21.3
 Pillow==9.1.1
 pycparser==2.21
 PyJWT==2.4.0
+pyparsing==3.0.9
 python3-openid==3.2.0
 pytz==2022.1
 requests==2.27.1
 requests-oauthlib==1.3.1
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.6
 six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.2.0
@@ -35,4 +42,3 @@ sqlparse==0.4.2
 uritemplate==4.1.1
 urllib3==1.26.9
 zipp==3.8.0
-gunicorn==20.1.0
