--- a/nginx.conf
+++ b/nginx.conf
@@ -29,6 +29,10 @@ http {
         root /www/static;
     }
 
+    location media/ {
+        root /www/media;
+    }
+
     location /server/ {
         proxy_pass http://backend:8000;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
