--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,3 +32,4 @@ services:
     volumes:
       - /home/gitlab-runner/projectvictory-test/nginx.conf:/etc/nginx/nginx.conf
       - /home/gitlab-runner/projectvictory-test/static/:/www/static
+      - /home/gitlab-runner/projectvictory-test/media/:/www/media
