--- a/Backend/victory/requirements.txt
+++ b/Backend/victory/requirements.txt
@@ -39,6 +39,7 @@ six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.2.0
 sqlparse==0.4.2
+transliterate==1.10.2
 uritemplate==4.1.1
 urllib3==1.26.9
 zipp==3.8.0
