Update nginx.conf, .gitlab-ci.yml, Frontend/Dockerfile

--- a/Frontend/Dockerfile
+++ b/Frontend/Dockerfile
@@ -8,5 +8,7 @@ FROM nginx:stable
 
 RUN mkdir /www
 COPY --from=build dist/ www/
+COPY --from=build private_pkey.pem /etc/nginx/private_pkey.pem
+COPY --from=build out_cert.pem /etc/nginx/out_cert.pem
 
 EXPOSE 80
