--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,6 +27,6 @@ build application:
   before_script:
     - cd ~/projectvictory-test
   script:
-    - docker compose up -d --no-deps --build
+    - docker compose up -d --build
   only:
     - dev
