--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,14 +7,14 @@ copy files:
   stage: build
   tags:
     - shell
-  before_script:
-    - sudo rm -r ~/projectvictory-test/backend/
-    - sudo rm -r ~/projectvictory-test/frontend/
-    #- sudo rm -r ~/projectvictory-test/static/
+  # before_script:
+  #   - sudo rm -r ~/projectvictory-test/backend/
+  #   - sudo rm -r ~/projectvictory-test/frontend/
+  #   #- sudo rm -r ~/projectvictory-test/static/
 
   script:
-    - sudo cp -R Backend/victory ~/projectvictory-test/backend/
-    - sudo cp -R Frontend/ ~/projectvictory-test/frontend/
+    - sudo cp -Rf Backend/victory ~/projectvictory-test/backend/
+    - sudo cp -Rf Frontend/ ~/projectvictory-test/frontend/
     - sudo cp -f nginx.conf ~/projectvictory-test/
     - sudo cp -f docker-compose.yaml ~/projectvictory-test/
   only:
