--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,8 +13,8 @@ copy files:
   #   #- sudo rm -r ~/projectvictory-test/static/
 
   script:
-    - sudo cp -rf Backend/victory/ ~/projectvictory-test/backend/
-    - sudo cp -rf Frontend/ ~/projectvictory-test/frontend/
+    - sudo cp -f Backend/victory/ ~/projectvictory-test/backend/
+    - sudo cp -f Frontend/ ~/projectvictory-test/frontend/
     - sudo cp -f nginx.conf ~/projectvictory-test/
     - sudo cp -f docker-compose.yaml ~/projectvictory-test/
   only:
