--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,14 +7,10 @@ copy files:
   stage: build
   tags:
     - shell
-  # before_script:
-  #   - sudo rm -r ~/projectvictory-test/backend/
-  #   - sudo rm -r ~/projectvictory-test/frontend/
-  #   #- sudo rm -r ~/projectvictory-test/static/
 
   script:
-    - sudo cp -rf Backend/victory/ ~/projectvictory-test/
-    - sudo cp -rf Frontend/ ~/projectvictory-test/
+    - sudo cp -r Backend/victory/. ~/projectvictory-test/backend
+    - sudo cp -r Frontend/. ~/projectvictory-test/frontend
     - sudo cp -f nginx.conf ~/projectvictory-test/
     - sudo cp -f docker-compose.yaml ~/projectvictory-test/
   only:
