--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,16 @@
 stages:
+  - update
   - build
-  - test
+  - run
   - deploy
 
-check_backend:
-  stage: build
+update_backend:
+  stage: update
   tags:
     - shell
   script:
     - sudo cp -r Backend/victory/. ~/projectvictory-test/backend
-    - sudo cp -r Frontend/. ~/projectvictory-test/frontend
+    #- sudo cp -r Frontend/. ~/projectvictory-test/frontend
     #- sudo cp -f nginx.conf ~/projectvictory-test/
     #- sudo cp -f docker-compose.yaml ~/projectvictory-test/
   only:
@@ -17,6 +18,21 @@ check_backend:
       - dev
     changes:
       - Backend/victory/*
+
+update_frontend:
+  stage: update
+  tags:
+    - shell
+  script:
+    #- sudo cp -r Backend/victory/. ~/projectvictory-test/backend
+    - sudo cp -r Frontend/. ~/projectvictory-test/frontend
+    #- sudo cp -f nginx.conf ~/projectvictory-test/
+    #- sudo cp -f docker-compose.yaml ~/projectvictory-test/
+  only:
+    refs:
+      - dev
+    changes:
+      - Frontend/*
 
 build application:
   stage: test
