--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,23 @@ stages:
   - run
   - deploy
 
-update_backend:
+update config:
+  stage: update
+  tags:
+    - shell
+  script:
+    #- sudo cp -r Backend/victory/. ~/projectvictory-test/backend
+    #- sudo cp -r Frontend/. ~/projectvictory-test/frontend
+    - sudo cp -f nginx.conf ~/projectvictory-test/
+    - sudo cp -f docker-compose.yaml ~/projectvictory-test/
+  only:
+    refs:
+      - dev
+    changes:
+      - nginx.conf
+      - docker-compose.yaml
+
+update backend:
   stage: update
   tags:
     - shell
@@ -19,7 +35,7 @@ update_backend:
     changes:
       - Backend/victory/*
 
-update_frontend:
+update frontend:
   stage: update
   tags:
     - shell
