--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,10 @@
 stages:
-  - update
   - build
   - run
   - deploy
 
 update config:
-  stage: update
+  stage: build
   tags:
     - shell
   script:
@@ -21,7 +20,7 @@ update config:
       - docker-compose.yaml
 
 update backend:
-  stage: update
+  stage: build
   tags:
     - shell
   script:
@@ -29,6 +28,8 @@ update backend:
     #- sudo cp -r Frontend/. ~/projectvictory-test/frontend
     #- sudo cp -f nginx.conf ~/projectvictory-test/
     #- sudo cp -f docker-compose.yaml ~/projectvictory-test/
+  after_script:
+    - docker compose build backend
   only:
     refs:
       - dev
@@ -36,7 +37,7 @@ update backend:
       - Backend/victory/*
 
 update frontend:
-  stage: update
+  stage: build
   tags:
     - shell
   script:
@@ -44,6 +45,8 @@ update frontend:
     - sudo cp -r Frontend/. ~/projectvictory-test/frontend
     #- sudo cp -f nginx.conf ~/projectvictory-test/
     #- sudo cp -f docker-compose.yaml ~/projectvictory-test/
+  after_script:
+    - docker compose build frontend
   only:
     refs:
       - dev
@@ -51,12 +54,12 @@ update frontend:
       - Frontend/*
 
 build application:
-  stage: build
+  stage: run
   tags:
     - shell
   before_script:
     - cd ~/projectvictory-test
   script:
-    - docker compose build
+    - docker compose up -d
   only:
     - dev
