--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,6 @@ update config:
   tags:
     - shell
   script:
-    #- sudo cp -r Backend/victory/. ~/projectvictory-test/backend
-    #- sudo cp -r Frontend/. ~/projectvictory-test/frontend
     - sudo cp -f nginx.conf ~/projectvictory-test/
     - sudo cp -f docker-compose.yaml ~/projectvictory-test/
   only:
@@ -19,15 +17,12 @@ update config:
       - nginx.conf
       - docker-compose.yaml
 
-update backend:
+build server:
   stage: build
   tags:
     - shell
   script:
     - sudo cp -r Backend/victory/. ~/projectvictory-test/backend
-    #- sudo cp -r Frontend/. ~/projectvictory-test/frontend
-    #- sudo cp -f nginx.conf ~/projectvictory-test/
-    #- sudo cp -f docker-compose.yaml ~/projectvictory-test/
   after_script:
     - docker compose build backend
   only:
@@ -36,17 +31,38 @@ update backend:
     changes:
       - Backend/victory/*
 
-update frontend:
+build web:
   stage: build
   tags:
     - shell
   script:
-    #- sudo cp -r Backend/victory/. ~/projectvictory-test/backend
     - sudo cp -r Frontend/. ~/projectvictory-test/frontend
-    #- sudo cp -f nginx.conf ~/projectvictory-test/
-    #- sudo cp -f docker-compose.yaml ~/projectvictory-test/
   after_script:
     - docker compose build frontend
+  only:
+    refs:
+      - dev
+    changes:
+      - Frontend/*
+
+run server:
+  stage: run
+  tags:
+    - shell
+  script:
+    - docker compose up -d backend
+  only:
+    refs:
+      - dev
+    changes:
+      - Backend/victory/*
+
+run web:
+  stage: run
+  tags:
+    - shell
+  script:
+    - docker compose up -d frontend
   only:
     refs:
       - dev
@@ -61,4 +77,19 @@ run application:
     - cd ~/projectvictory-test
   script:
     - docker compose up -d
+  only:
+    refs:
+      - dev
+    changes:
+      - nginx.conf
+      - docker-compose.yaml
 
+create application:
+  stage: run
+  tags:
+    - shell
+  before_script:
+    - cd ~/projectvictory-test
+  script:
+    - docker compose up -d --build
+  when: manual
